--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -75,6 +75,7 @@ p {
     margin-left: 20px;
 }
 
+/* Page Contents Right */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,6 +135,7 @@ p {
     max-width: 150px;
 }
 
+ /* Page Content Left */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
