--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -76,7 +76,7 @@ p {
 }
 
  /* Page Content Left */
-.search-engine-optimization {
+ .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -84,7 +84,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+    
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -93,7 +93,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+    
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -103,29 +103,11 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.left-img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.left-h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
