changed content div to content

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -40,7 +40,7 @@ p {
     font-size: 48px;
 }
 
-.header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
@@ -52,15 +52,13 @@ p {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
+
 
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
+    list-style-type: none;
 }
-/* Header Ends */
 
 
 /* Hero */
