--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -125,7 +125,14 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-.benefit-lead {
+
+.left-content {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+/* removed copied items here */
+/* .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -139,6 +146,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
+*/
 
 .right-h3 {
     margin-bottom: 10px;
