--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -77,26 +77,7 @@ p {
     margin-left: 20px;
 }
 
- /* Page Content Left */
- .search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-    
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-    
-.social-media-marketing {
+.left-content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -126,27 +107,10 @@ p {
     background-color: #2589bd;
 }
 
-.left-content {
+.right-content {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-/* removed copied items here */
-/* .benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-*/
 
 .right-h3 {
     margin-bottom: 10px;
